[package]
name = "dioxus_leaflet"
version = "0.1.0"
authors = ["Matias <26164588+MatiasHiltunen@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = [] }
leaflet_core = { path = "../leaflet_core" }
web-time = "1"
futures-timer = { version = "3", features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyrender = "0.6.2"
anyrender_vello = "0.6.1"
image = { version = "0.25.6", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
kurbo = "0.12"
peniko = "0.5.0"
wgpu = "26.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "OffscreenCanvas",
    "Worker",
    "Window",
    "Element",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["native"]
mobile = ["native"]
native = ["dioxus/native"]
custom_renderer = ["dioxus/third-party-renderer"]
