[package]
name = "leaflet_core"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.28", default-features = false }
